# fire-severity-dnbr

./: .gitattributes  .gitignore  CLAUDE.md  README.md  config.json  layout.json  spec.yaml
ecoscope-workflows-fire-severity-dnbr-er-workflow/: Dockerfile  README.md  pixi.toml  pyproject.toml
ecoscope-workflows-fire-severity-dnbr-er-workflow/dnbr-tasks/dnbr_tasks/: __init__.py
ecoscope-workflows-fire-severity-dnbr-er-workflow/ecoscope_workflows_fire_severity_dnbr_er_workflow/: cli.py  rjsf.json
ecoscope-workflows-fire-severity-dnbr-er-workflow/ecoscope_workflows_fire_severity_dnbr_er_workflow/dags/: run_sequential.py  run_sequential_mock_io.py
ecoscope-workflows-fire-severity-dnbr-er-workflow/tests/: conftest.py  test_metadata.py
ecoscope-workflows-fire-severity-dnbr-workflow/: Dockerfile  README.md  pixi.toml  pyproject.toml
ecoscope-workflows-fire-severity-dnbr-workflow/dnbr-tasks/: pyproject.toml
ecoscope-workflows-fire-severity-dnbr-workflow/dnbr-tasks/dnbr_tasks/: __init__.py
ecoscope-workflows-fire-severity-dnbr-workflow/ecoscope_workflows_fire_severity_dnbr_workflow/: cli.py  params.json
ecoscope-workflows-fire-severity-dnbr-workflow/ecoscope_workflows_fire_severity_dnbr_workflow/dags/: run_sequential_mock_io.py
ecoscope-workflows-fire-severity-dnbr-workflow/tests/: conftest.py  test_metadata.py
