[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dnbr-tasks"
version = "0.1.0"
description = "Custom tasks for fire severity (dNBR) workflows on the Ecoscope Platform"
dependencies = ["geopandas", "numpy", "wt-registry>=0.2,<1", "shapely"]

[project.entry-points."wt_registry"]
dnbr_tasks = "dnbr_tasks"

[tool.hatch.build.targets.wheel]
packages = ["dnbr_tasks"]
